Added new details and emu otori sounds on pc/setup

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
                 <h2>My hobbies</h2>
                 <ul class="hobbies-list">
                     <li class="hobby">
-                        <span class="title">+ Gaming(click me)</span>
+                        <span class="title">+ Gaming</span>
                         <ul class="details">
                             <li>All my played Games on Steam</li>
                         </ul>
                     </li>
                     <li class="hobby">
-                        <span class="title">+ Watching Anime(click me)</span>
+                        <span class="title">+ Watching Anime</span>
                         <ul class="details">
                             <li>My anime list</li>
                         </ul>
                     </li>
                     <li class="hobby">
-                        <span class="title">+ Programming(click me)</span>
+                        <span class="title">+ Programming</span>
                         <ul class="details">
                             <li>HTML</li>
                             <li>CSS</li>
@@ -77,20 +77,20 @@
                         </ul>
                     </li>
                     <li class="hobby">
-                        <span class="title">+ Playing Guitar(click me)</span>
+                        <span class="title">+ Playing Guitar</span>
                         <ul class="details">
                             <li>J-Rock</li>
                             <li>Russian Rock</li>
                         </ul>
                     </li>
                     <li class="hobby">
-                        <span class="title">+ Drawing(click me)</span>
+                        <span class="title">+ Drawing</span>
                         <ul class="details">
                             <li> Just on paper</li>
                         </ul>
                     </li>
                     <li class="hobby">
-                        <span class="title">+ Learning new Knowledge(click me)</span>
+                        <span class="title">+ Learning new Knowledge</span>
                         <ul class="details">
                             <li>Learing more about Geographie</li>
                             <li>Learning more about History</li>
