--- a/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
+++ b/subpages/subpage_setup_pc_compenents/setup_pc_compenents.html
@@ -15,7 +15,7 @@
             <h1>My PC</h1>
                 <div class="slides pc-slides">
                     <div class="slide active">
-                        <h1>Overview</h1>
+                        <h2>Overview</h2>
                         <h4>Build Year</h4>
                         <p>Build: September 2021(4 years old)</p>
                         <h4>Estimated Value</h4>
@@ -27,10 +27,10 @@
                         <img class="arch-icon" src="setup_pc_compenents_images/Arch Icon.png">
                     </div>
                     <div class="slide">
-                        <h1>Pictures</h1>
+                        <h2>Pictures</h2>
                     </div>
                     <div class="slide">
-                        <h1>Components</h1>
+                        <h2>Components</h2>
 
                         <div class="components-grid">
                             <div class="left">
@@ -55,42 +55,74 @@
                         </div>
                     </div>
                     <div class="slide">
-                        <h1>Cooling and Noise</h1>
-                        <h4>Water cooling(AIO)</h4>
-                        <p>NZXT Kranken X73 360mm</p>
-                        <h4>Number of fans</h4>
-                        <p>7</p>
-                        <h4>Idle Temperature</h4>
-                        <p>CPU on AVG: </p>
-                        <p>GPU on AVG: </p>
-                        <h4>Gaming Temperature</h4>
-                        <p>CPU on AVG: </p>
-                        <p>GPU on AVG: </p>
-                        <h4>Idle Noise</h4>
-                        <p>MIN: 20.0dB</p>
-                        <p>AVG: 23.4dB</p>
-                        <p>MAX: 26.0dB</p>
-                        <h4>Gaming Noise</h4>
-                        <p>MIN: dB</p>
-                        <p>AVG: dB</p>
-                        <p>MAX: dB</p>
+                        <h2>Cooling and Noise</h2>
+                        <div class="cooling-grid">
+                            <div class="cooling-col">
+                                <h4>Water cooling (AIO)</h4>
+                                <p>NZXT Kraken X73 360mm</p>
+                                <h4>Number of fans</h4>
+                                <p>7</p>
+                            </div>
+                            <div class="cooling-col">
+                                <h4>Idle Temperature</h4>
+                                <p>CPU on AVG:</p>
+                                <p>GPU on AVG:</p>
+                                <h4>Gaming Temperature</h4>
+                                <p>CPU on AVG:</p>
+                                <p>GPU on AVG:</p>
+                            </div>
+                            <div class="cooling-col">
+                                <h4>Idle Noise</h4>
+                                <p>MIN: 20.0 dB</p>
+                                <p>AVG: 23.4 dB</p>
+                                <p>MAX: 26.0 dB</p>
+                                <h4>Gaming Noise</h4>
+                                <p>MIN: dB</p>
+                                <p>AVG: dB</p>
+                                <p>MAX: dB</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="slide">
-                        <h1>PC Benchmarks</h1>
-                        <h4>CPU Benchmarks</h4>
-                        <p></p>
-                        <h4>GPU Benchmarks</h4>
-                        <p></p>
+                    <h2>PC Benchmarks</h2>
+                    <div class="benchmark-grid">
+                        <div class="benchmark-col">
+                            <h4>CPU Benchmarks</h4>
+                            <p>Cinebench R23 (Single):</p>
+                            <p>Cinebench R23 (Multi):</p>
+                            <p>Geekbench 6:</p>
+                        </div>
+                        <div class="benchmark-col">
+                            <h4>GPU Benchmarks</h4>
+                            <p>3DMark Time Spy:</p>
+                            <p>3DMark Fire Strike:</p>
+                            <p>Unigine Superposition:</p>
+                        </div>
                     </div>
-                    <div class="slide">
-                        <h1>Gaming Performance</h1>
-                        <h4>Cyberpunk 2077</h4>
-                        <p></p>
-                        <h4>Doom the dark ages</h4>
-                        <p></p>
-                        <h4>Portal</h4>
-                        <p></p>
+                </div>
+                <div class="slide">
+                    <h2>Gaming Performance</h2>
+                    <div class="gaming-grid">
+                        <div class="game-col">
+                            <h4>Cyberpunk 2077</h4>
+                            <p>1440p | High</p>
+                            <p>AVG FPS:</p>
+                            <p>1% Low:</p>
+                        </div>
+                        <div class="game-col">
+                            <h4>Doom: The Dark Ages</h4>
+                            <p>1440p | Ultra</p>
+                            <p>AVG FPS:</p>
+                            <p>1% Low:</p>
+                        </div>
+                        <div class="game-col">
+                            <h4>Portal</h4>
+                            <p>1440p | Max</p>
+                            <p>AVG FPS:</p>
+                            <p>1% Low:</p>
+                        </div>
                     </div>
+                </div>
                 </div>
                         <div class="indicator-container pc-indicators"></div>
                         <div class="navigation pc-nav">
@@ -102,10 +134,29 @@
                     <div class="container setup-container">
                         <h1>My Setup</h1>
                         <div class="slides setup-slides">
-                        <div class="slide active">Setup Slide 1 – Desk</div>
-                        <div class="slide">Setup Slide 2 – Peripherals</div>
-                        <div class="slide">Setup Slide 3 – Extras</div>
-                    </div>
+
+                            <div class="slide active">
+                                <h2>Desk</h2>
+                            </div>
+
+                            <div class="slide">
+                                <h2>Monitors</h2>
+                                <h4>3× Monitor Setup</h4>
+                                <p>Main: 27\" 1440p 165Hz</p>
+                                <p>Left: 27\" 1440p 144Hz</p>
+                                <p>Right: 24\" 1080p</p>
+                            </div>
+
+                            <div class="slide">
+                                <h2>Peripherals</h2>
+                            </div>
+
+                            <div class="slide">
+                                <h2>Extras & Decor</h2>
+                                <p>Figures, LED lighting, collectibles</p>
+                            </div>
+
+                        </div>
                         <div class="indicator-container setup-indicators"></div>
                         <div class="navigation setup-nav">
                         <button class="prev">◀</button>
@@ -114,7 +165,11 @@
                 </div>
                 <img class="kirby" src="https://media.tenor.com/f5mFRebd1WwAAAAi/kirby-running.gif">
                 <img class="tenna" src="https://media.tenor.com/t536_6C1QUIAAAAi/deltarune-ant-tenna.gif">
-                <img class="emu" src="https://media.tenor.com/1ZC6p_i7QjgAAAAj/pjsk-emu-otori.gif">
+                <img id="emu" class="emu" src="https://media.tenor.com/1ZC6p_i7QjgAAAAj/pjsk-emu-otori.gif">
+                <div id="soundArea"></div>
+                <audio id="emu_hello" src="setup_pc_compenents_sounds/emu otori hello.mp3"></audio>
+                <audio id="Im_emu_otori" src="setup_pc_compenents_sounds/Im emu otori.mp3"></audio>
+                <audio id="emu_otori_smile" src="setup_pc_compenents_sounds/emu otori smile.mp3"></audio>
             </div>
         <div class="mobile">
             <h1>Mobile-version</h1>
